k8s/base/api-gateway/http-route-jobs.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jobs-routes
  namespace: platform
  labels:
    app.kubernetes.io/component: api-gateway
spec:
  parentRefs:
    - name: platform-gateway
      namespace: platform
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/jobs
      backendRefs:
        - name: jobs-stable
          port: 9097
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: SecurityPolicy
            name: jwt-policy-jobs
